# libsync

./: .gitignore  CMakeLists.txt  Makefile.am  README  TODO  configure.ac  doxygen.conf
client/: CMakeLists.txt  Makefile.am  client.conf  main.cxx
daemon/: Makefile.am  main.cxx
doc/: Proposal.odt
server/: CMakeLists.txt  Makefile.am  main.cxx  server.conf  user.cxx  user.hxx
src/: CMakeLists.txt  Makefile.am  bst.hxx  client.cxx  client.hxx  config.cxx  config.hxx  connector.hxx  connector_sock.cxx  connector_sock.hxx  crypt.cxx  crypt.hxx  dict.hxx  log.cxx  log.hxx  messages.cxx  messages.hxx  metadata.cxx  metadata.hxx  net.cxx  net.hxx  netmsg.cxx  netmsg.hxx  runnable.hxx  thread.cxx  thread.hxx  util.cxx  util.hxx  watchdog.cxx  watchdog.hxx
src/test/: config.cxx  crypt.cxx  log.cxx  metadata.cxx  watchdog.cxx
src/test/config/: a.out  basic  comment  duplicate  inveq  invqu  main.cxx  many  merge1  merge2  quotes  whitespace
